Implemented the multi host:port url with 2 dbs, enabled preview for java 21.